# auto_ru_parser

./: .env_example  .gitignore  README.md  main.py  parser.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
scripts/: format  lint
src/: parser.py  schemas.py  strings.py  to_csv.py
